bluejay-parser/tests/snapshots/schema_definition_integration_test__error@duplicate_root_operation_definitions.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/duplicate_root_operation_definitions.graphql
---
Error: Multiple root operation type definitions for `query`
    ╭─[<unknown>:1:1]
    │
 10 │   query: MyObject
    │          ────┬───  
    │              ╰───── Root operation type definition for `query`
 11 │   query: MyOtherObject
    │          ──────┬──────  
    │                ╰──────── Root operation type definition for `query`
────╯

